@@ -133,7 +133,7 @@ a, a:hover, a:active, a:link, a:visited
 .cp
 {
 	margin: 0 auto;
-    overflow: hidden;
+    /*overflow: hidden;*/
     width: 960px;
 }
 
@@ -363,3 +363,5 @@ ul.MenuClass img
 {
 	padding:0 0 15px 0;
 }
+/*watchers action menu override opacity */
+.ModuleOptionsMenu-Grey li ul{opacity:.95;}
